--- a/图神经网络最新论文总结201907.md
+++ b/图神经网络最新论文总结201907.md
@@ -1,4 +1,4 @@
-Crystal Graph Neural Networks for Data Mining in Materials Science (Arxiv 2019)[1]
+Crystal Graph Neural Networks for Data Mining in Materials Science (Arxiv 2019)
 本文提出了一种晶体图形神经网络方法，没有键距，并且引入了一个尺度不变图协调器。CGNN模型预测测试材料的形成能、单位电池体积、带隙和总磁化强度等体积特性，平均误差小于数据库的对应数据。 本文的代码可以在github[2]找到。
 
 Explainability Techniques for Graph Convolutional Networks (ICML 2019)[3]
